--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,7 @@
     <!-- Contact Us !-->
     <div class="cu" style="background-image: url(images/paper-bg@2x.jpg);">
         <div class="container">
-            <form action="mail.php" method="post" class="cu__form" id="contact-form" onsubmit="return checkForm()">
+            <form action="telegram.php" method="post" class="cu__form" id="contact-form" onsubmit="return checkForm()">
                 <div class="cu__form-top">
                     <h3 class="form-title">Contact Us</h3>
                     <p class="form-text">We want you to be happy. If you're not satisfied with our products or service, please don't hesitate to reach out to us.</p>
